# rivenu

./: Cargo.toml  README.md  shell.nix
src/: config.rs  cpu.rs  instruction.rs  lib.rs  memory.rs  mmu.rs  registers.rs  trap.rs
src/cpu/: config.rs  mod.rs  register.rs
src/instruction/: mod.rs  parse.rs
src/memory/: mmu.rs
